<resources>
    <string name="app_name">Przypominajka</string>
    <string name="navigation_drawer_open">Otwórz menu</string>
    <string name="navigation_drawer_close">Zamknij menu</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Nagłówek menu</string>
    <string name="action_settings">Ustawienia</string>

    <string name="menu_home">Kalendarz</string>
    <string name="menu_events">Wydarzenia</string>

    <string name="confirm">Zatwierdź</string>
    <string name="leftArrow"><![CDATA[<-]]></string>
    <string name="monthName">Month</string>
    <string name="year">2020</string>
    <string name="rightArrow"><![CDATA[->]]></string>
    <string name="fab_content_desc">Dodaj nowe wydarzenia to przypominania</string>
    <string name="event_name">Nazwa wydarzenia:</string>
    <string name="choose_color">Wybierz</string>
    <string name="nav_calendar">Kalendarz</string>
    <string name="nav_events">Zapisane wydarzenia</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="event_discription">Opis wydarzenia:</string>

    <string name="event_details">Szczegóły wydarzenia</string>
    <string name="made_by">by Krzysztof Rutana</string>
    <string name="email_address">krzysztofrutana@wp.pl</string>
    <string name="add_event">Dodawanie zdarzenia</string>
    <string name="time_word">Godzina:</string>
    <string name="time_default">Domyślna</string>
    <string name="set_time_text">wybierz</string>
    <string name="save_event">Zapisz wydarzenie</string>
    <string name="click_to_choose">kliknij by wybrać</string>
    <string name="start_from">Rozpocznij od:</string>
    <string name="date_of_event">Data wydarzenia:</string>
    <string name="one_time">jednorazowo</string>
    <string name="repeats_allways">Zawsze</string>
    <string name="write_number">wpisz liczbę</string>
    <string name="how_many">ile</string>
    <string name="day">dni</string>
    <string name="week">tygodnie</string>
    <string name="month">miesiące</string>
    <string name="how_many_repeats">Ile powtórzeń:</string>
    <string name="remind_what">Przypominaj co:</string>
    <string name="cyclically_at_time_intervals">cykliczne, w odstępach czasu</string>
    <string name="number_of_months">liczba miesięcy</string>
    <string name="day_of_month_hint">dzień miesiąca</string>
    <string name="day_of_month">Dzień miesiąca:</string>
    <string name="in_current_day_of_month">w konkretne dni miesiąca</string>
    <string name="event_type">Rodzaj wydarzenia:</string>
    <string name="write_discription">wpisz opis</string>
    <string name="event_color">Kolor wydarzenia:</string>
    <string name="write_event_name_hint">wpisz nazwę</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="drawer_settings">Ustawienia</string>
    <string name="interval_of_check_new_events">Częstotliwość sprawdzania nowych wydarzeń:</string>
    <string name="time_settings">Ustawienia czasu</string>
    <string name="backup_settings">Kopia zapasowa</string>
    <string name="backup_location">Lokalizacja kopii zapasowej:</string>

    <string-array name="backup_options">
        <item>Dysk Google</item>
        <item>Na telefonie</item>
    </string-array>

    <string-array name="restore_options">
        <item>Dysk Google</item>
        <item>Telefon</item>
    </string-array>

    <string name="backup_prompt">Wybierz lokalizację:</string>
    <string name="configure">Skonfiguruj</string>
    <string name="current_backup_settings">Aktualna konfiguracja:</string>
    <string name="make_backup">Wykonaj kopię zapasową</string>
    <string name="restore_backup_location">Przywróć kopię zapasową z:</string>
    <string name="restore_backup_btn">Przywróć kopię zapasową</string>
    <string name="dir">Folder:</string>
    <string name="file_name">Nazwa pliku:</string>
    <string name="save_settings">Zapisz ustawienia</string>
    <string name="add_date_time_to_name">Dodaj aktualną datę i godzinę do nazwy</string>
    <string name="database_name_prefix">.db</string>
    <string name="write_name">wpisz nazwę</string>

    //Settings fragment
    <string name="SF_do_configuration">Przeprowadź konfigurację</string>
    <string name="SF_choose_configuration">wybierz czas</string>
    <string name="SF_logged_in_as">Zalogowany jako: </string>

    //AddNewActivity
    <string name="ANA_event_exist">Wydarzenie już istnieje</string>

    //Event details activity
    <string name="EVA_absence">Brak</string>
    <string name="EVA_always_remind_what">Przypominaj zawsze co</string>
    <string name="EVA_remind_what">Przypominaj co</string>
    <string name="EVA_one_time">Jednorazowo</string>

    //Local backup settings
    <string name="LBS_change_folder">Zmień folder</string>

    //Remote backup settings
    <string name="RBS_logged_in">Zalogowano</string>
    <string name="RBS_logged_out">Nie zalogowano</string>
    <string name="RBS_log_in">Zaloguj</string>
    <string name="RBS_log_out">Wyloguj</string>
    <string name="make_backup_section">Stwórz kopię zapasową</string>

    //Alert dialog text
    <string name="ADmessage">Znalezione niezrealizowane wydarzenia:</string>
    <string name="ADtitle">Niezrealizowane wydarzenia</string>

</resources>